tests/baselines/reference/listFailure.errors.txt
listFailure.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== listFailure.ts (1 errors) ====
    module Editor {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        export class Buffer {
        	lines: List<Line> = ListMakeHead<Line>();
            
            addLine(lineText: string): List<Line> {
                
                var line: Line = new Line();
                var lineEntry = this.lines.add(line);
    
                return lineEntry;
            }    
        }
        
        export function ListRemoveEntry<U>(entry: List<U>): List<U> { 
        	return entry;
        }
    
        export function ListMakeHead<U>(): List<U> {
    		return null;
        }
    
        export function ListMakeEntry<U>(data: U): List<U> {
    		return null;
        }    
    
        class List<T> { 
            public next: List<T>; 
    
            add(data: T): List<T> {
                this.next = ListMakeEntry(data);
                return this.next;
            }
    
            popEntry(head: List<T>): List<T> {
                return (ListRemoveEntry(this.next));
            }      
        }
    
    	export class Line {}
    }